--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "soil",
+  "description": "CDK Constructs Library",
   "version": "0.1.0",
-  "bin": {
-    "soil": "bin/soil.js"
-  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "prepublish": "tsc"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "aws-cdk": "2.8.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
+    "jest": "^27.4.7",
+    "jsii": "^1.52.1",
+    "jsii-pacmak": "^1.52.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
+    "tslint": "^6.1.3",
+    "typescript": "~4.5.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.8.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "aws-cdk": "^2.8.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.8.0-alpha.0",
+    "aws-cdk-lib": "^2.8.0",
+    "cdk-ecr-deployment": "^2.1.0",
+    "cdk-iam-floyd": "^0.308.0",
+    "constructs": "^10.0.40",
+    "source-map-support": "^0.5.21",
+    "yaml": "^1.10.2"
   }
 }
