Implement CI/CD

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-israelg99:registry=https://npm.pkg.github.com
+@israelg99:registry=https://npm.pkg.github.com
+repository=git://github.com/israelg99/soil.git
